poco pero fundamental

--- a/srcPython/mod02CSiAPI_defaultModel_Etabs.ipynb
+++ b/srcPython/mod02CSiAPI_defaultModel_Etabs.ipynb
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "#establezca el siguiente indicador en True para adjuntarlo a una instancia existente del programa ETABS\n",
+    "# establezca el siguiente indicador en True para adjuntarlo a una instancia existente del programa ETABS\n",
     "# True o 1: Para indicar si va a trabajar con el programa abierto de ETABS\n",
     "AttachToInstance = False\n",
     "\n",
@@ -108,7 +108,7 @@
     {
      "data": {
       "text/plain": [
-       "<POINTER(cSapModel) ptr=0x1cb2040ff20 at 1cb201e2f50>"
+       "<POINTER(cSapModel) ptr=0x2622bb4ff20 at 2622b8bf350>"
       ]
      },
      "execution_count": 3,
@@ -774,7 +774,7 @@
     }
    ],
    "source": [
-    "# Unlocking model | Abriendo modelo para establecer nueva ejecucion (hace referencia al candadito de etabs)\n",
+    "# Unlocking model | Abriendo modelo para establecer nueva ejecucion (hace referencia al candado de etabs)\n",
     "# smodel.SetModelIsLocked(False)\n",
     "# get value | Optner el valor.\n",
     "print(smodel.GetModelIsLocked()) # False"
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
