--- a/srcPython/mod02CSiAPI_defaultModel_SAP2000.ipynb
+++ b/srcPython/mod02CSiAPI_defaultModel_SAP2000.ipynb
@@ -45,13 +45,13 @@
     }
    ],
    "source": [
-    "#establezca el siguiente indicador en True para adjuntarlo a una instancia existente del programa ETABS\n",
-    "# True o 1: Para indicar si va a trabajar con el programa abierto de ETABS\n",
+    "#establezca el siguiente indicador en True para adjuntarlo a una instancia existente del programa SAP2000\n",
+    "# True o 1: Para indicar si va a trabajar con el programa abierto de SAP2000\n",
     "AttachToInstance = False\n",
     "\n",
     "# establezca el siguiente indicador en True para especificar manualmente la ruta a SAP2000.exe\n",
-    "# esto permite una conexión a una versión de ETABS|SAP2000 que no sea la última instalación\n",
-    "# de lo contrario, se lanzará la última versión instalada de ETABS|SAP2000\n",
+    "# esto permite una conexión a una versión de SAP2000 que no sea la última instalación\n",
+    "# de lo contrario, se lanzará la última versión instalada de SAP2000\n",
     "SpecifyPath = False\n",
     "\n",
     "ProgramPath = \"C:\\\\Program Files\\\\Computers and Structures\\\\SAP2000 23\\\\SAP2000.exe\"\n",
@@ -67,7 +67,7 @@
     "        SAP2000Object = helper.GetObject(\"CSI.SAP2000.API.SapObject\")\n",
     "        print(\"Coneccion exitosa!.\\nadjuntando a una instancia existente.\")\n",
     "    except (OSError, comtypes.COMError):\n",
-    "        print(\"No se encontró ninguna instancia en ejecución del programa(Etabs).\")\n",
+    "        print(\"No se encontró ninguna instancia en ejecución del programa.\")\n",
     "        sys.exit(-1)\n",
     "else:\n",
     "    if SpecifyPath: # para versiones anteriores a la ultima version\n",
@@ -719,7 +719,7 @@
     }
    ],
    "source": [
-    "# Unlocking model | Abriendo modelo para establecer nueva ejecucion (hace referencia al candadito de etabs)\n",
+    "# Unlocking model | Abriendo modelo para establecer nueva ejecucion (hace referencia al candadito)\n",
     "# smodel.SetModelIsLocked(False)\n",
     "# get value | Optner el valor.\n",
     "print(smodel.GetModelIsLocked()) # False"
