--- a/srcPython/mod02CSiAPI_defaultModel_Etabs.ipynb
+++ b/srcPython/mod02CSiAPI_defaultModel_Etabs.ipynb
@@ -4,7 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modelo por defecto para ETABS\n"
+    "<center>\n",
+    "    <h1 style=\"font-size: 12; font-weight: 900; \">--- 1 ---<h1>\n",
+    "    <h2>CSiAPI - ETABS</h2>\n",
+    "    <!-- <p><strong></strong</p> -->\n",
+    "</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font style=\"color: #1f7ffd\">Modelo por defecto para ETABS</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**0. Instalar dependencia**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install comtypes"
    ]
   },
   {
@@ -826,38 +853,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cerramos la coneccion o la aplicacion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Se cerro con exito.\n"
-     ]
-    }
-   ],
-   "source": [
-    "if (ETABSObject.ApplicationExit(False)):\n",
-    "    print(\"ETABS, No se pudo cerrar\")\n",
-    "else:\n",
-    "    print(\"Se cerro con exito.\")\n",
-    "\n",
-    "smodel = None\n",
-    "ETABSObject = None\n",
-    "del smodel, ETABSObject, res\n",
-    "exit(-1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Test o Prueba**"
    ]
   },
@@ -917,6 +912,38 @@
     "calculated_disp = np.array(ProgramResult).round(4); # calculo generado\n",
     "assert np.allclose(calculated_disp, correct_displacement), \" Your scritp is probably wrong\"\n",
     "print(\"All correct. Good work !.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cerramos la coneccion o la aplicacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se cerro con exito.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if (ETABSObject.ApplicationExit(False)):\n",
+    "    print(\"ETABS, No se pudo cerrar\")\n",
+    "else:\n",
+    "    print(\"Se cerro con exito.\")\n",
+    "\n",
+    "smodel = None\n",
+    "ETABSObject = None\n",
+    "del smodel, ETABSObject, res\n",
+    "exit(-1)"
    ]
   }
  ],
