--- a/srcPython/mod02CSiAPI_defaultModel_SAP2000.ipynb
+++ b/srcPython/mod02CSiAPI_defaultModel_SAP2000.ipynb
@@ -20,11 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install comtypes"
+    "# !pip install comtypes numpy matplotlib"
    ]
   },
   {
@@ -32,6 +32,17 @@
    "metadata": {},
    "source": [
     "**1. dependencias**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "# from mpl_toolkits.mplot3d import Axes3D"
    ]
   },
   {
@@ -366,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -381,10 +392,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "# from mpl_toolkits.mplot3d import Axes3D\n",
-    "\n",
     "coords = np.array([[0,0,0],[0,0,10],[8,0,16],[-4,0,10]]);\n",
     "i, j = None, None\n",
     "plt.figure(1)\n",
@@ -934,6 +941,20 @@
     "SAP2000Object = None\n",
     "del smodel, SAP2000Object, res\n",
     "exit(-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Referencias."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- "
    ]
   }
  ],
