--- a/srcPython/mod02CSiAPI_defaultModel_Etabs.ipynb
+++ b/srcPython/mod02CSiAPI_defaultModel_Etabs.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install comtypes"
+    "# !pip install comtypes numpy matplotlib"
    ]
   },
   {
@@ -39,6 +39,17 @@
    "metadata": {},
    "source": [
     "**1. dependencias**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "# from mpl_toolkits.mplot3d import Axes3D"
    ]
   },
   {
@@ -428,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -443,10 +454,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "# from mpl_toolkits.mplot3d import Axes3D\n",
-    "\n",
     "coords = np.array([[0,0,0],[0,0,10],[8,0,16],[-4,0,10]]);\n",
     "i, j = None, None\n",
     "plt.figure(1)\n",
@@ -944,6 +951,21 @@
     "ETABSObject = None\n",
     "del smodel, ETABSObject, res\n",
     "exit(-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Referencias."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- C:\\\\Program Files\\\\Computers and Structures\\\\ETABS 17\\\\CSI API ETABS v1.chm\n",
+    "- "
    ]
   }
  ],
