--- a/srcPython/mod00LibComtypes.ipynb
+++ b/srcPython/mod00LibComtypes.ipynb
@@ -5,9 +5,15 @@
    "metadata": {},
    "source": [
     "<center>\n",
-    "    <h1 style=\"font-size: 12; font-weight: 900; \">--- 0 ---<h1>\n",
+    "    <h1 style=\"font-size: 12; font-weight: 900; \">--- 0 ---<br/>\n",
     "    <a href=\"https://pythonhosted.org/comtypes/\">Libreria comtypes</a>\n",
+    "    <h1>\n",
     "    <!-- <p><strong></strong</p> -->\n",
+    "    <div id=\"current_date\">\n",
+    "        <script>\n",
+    "            document.getElementById(\"current_date\").innerHTML = Date();\n",
+    "        </script>\n",
+    "    </div>\n",
     "</center>"
    ]
   },
