--- a/srcPython/mod01CSiAPI funciones.ipynb
+++ b/srcPython/mod01CSiAPI funciones.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Syntaxis de las funciones y clases para Python y C#"
+   ]
   },
   {
    "cell_type": "markdown",
