--- a/srcPython/mod00LibComtypes.ipynb
+++ b/srcPython/mod00LibComtypes.ipynb
@@ -9,12 +9,9 @@
     "    <a href=\"https://pythonhosted.org/comtypes/\">Libreria comtypes</a>\n",
     "    <h1>\n",
     "    <!-- <p><strong></strong</p> -->\n",
-    "    <div id=\"current_date\">\n",
-    "        <script>\n",
-    "            document.getElementById(\"current_date\").innerHTML = Date();\n",
-    "        </script>\n",
-    "    </div>\n",
-    "</center>"
+    "</center>\n",
+    "\n",
+    "---"
    ]
   },
   {
