--- a/srcPython/mod03CSiAPI_example2 Truss.ipynb
+++ b/srcPython/mod03CSiAPI_example2 Truss.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Código parametrico generado para estrcuturas tipo cercha"
+    "# Código parametrico generado para estructuras tipo cercha"
    ]
   },
   {
