--- a/srcPython/mod07CSiAPI AnalisiModal y RespuestaEspectral.ipynb
+++ b/srcPython/mod07CSiAPI AnalisiModal y RespuestaEspectral.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
     "axes.set_xlabel('X_Distance (m)')\n",
     "axes.set_ylabel('Y-Distance (m)')\n",
     "axes.set_zlabel('Z-Distance (m)')\n",
-    "axes.set_title('Structure to analyse')\n",
+    "axes.set_title(f'{nameModelProject}')\n",
     "axes.grid()"
    ]
   },
