--- a/srcPython/mod07CSiAPI AnalisiModal y RespuestaEspectral.ipynb
+++ b/srcPython/mod07CSiAPI AnalisiModal y RespuestaEspectral.ipynb
@@ -5,18 +5,28 @@
    "metadata": {},
    "source": [
     "# Analisis dinamico modal espectral\n",
-    "Modelado con uso de `API de CSi` y `Python`\n",
-    "\n",
-    "[ref](https://youtu.be/qcxLR_0fhYQ)"
+    "Modelado con uso de `API de CSi` y `Python`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, sys, numpy as np, pandas as pd, ctypes\n",
+    "# !pip install numpy matplotlib pandas comtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, sys, ctypes\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "import comtypes.client\n",
     "from matplotlib import pyplot as plt"
    ]
