--- a/srcPython/mod07CSiAPI AnalisiModal y RespuestaEspectral.ipynb
+++ b/srcPython/mod07CSiAPI AnalisiModal y RespuestaEspectral.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,12 @@
     "tonf = 1000*kgf\n",
     "\n",
     "# Constantes Físicas\n",
-    "g = 9.80665*m/s**2"
+    "g = 9.80665*m/s**2\n",
+    "\n",
+    "# configuraciones de unidades\n",
+    "kN_m_C = 6\n",
+    "kgf_m_C = 8\n",
+    "Tonf_m_C = 12"
    ]
   },
   {
@@ -296,14 +301,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Unit Preferences | Preferencias de Sistema de Unidades\n",
-    "kN_m_C = 6\n",
-    "kgf_m_C = 8\n",
-    "Tonf_m_C = 12"
+    "# .... en la parte de unidades se define las medidadas ..."
    ]
   },
   {
