--- a/srcPython/mod07CSiAPI AnalisiModal y RespuestaEspectral.ipynb
+++ b/srcPython/mod07CSiAPI AnalisiModal y RespuestaEspectral.ipynb
@@ -931,11 +931,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(\"No se pudo cerrar\") if (connect_to_app.ApplicationExit(False)) else print(\"Se cerro con exito.\")\n",
+    "print(\"No se pudo cerrar\") if (connect_to_app.ApplicationExit(False)) else print(\"Se cerro con exito.\")\n",
     "\n",
     "smodel, connect_to_app = None, None\n",
     "del smodel, connect_to_app\n",
