--- a/srcPython/mod05CSiAPI_example4 Frame b-funcional.ipynb
+++ b/srcPython/mod05CSiAPI_example4 Frame b-funcional.ipynb
@@ -13,13 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os, sys\n",
     "\n",
     "import comtypes.client\n",
+    "\n",
     "import ctypes"
    ]
   },
@@ -27,12 +28,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Funciones utiles de limpiesa y restamblecimiento"
+    "## 0. Funciones."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Funciones utiles de limpiesa y restamblecimiento"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,15 +53,8 @@
     "    for frame in all_frames:\n",
     "        smodel.FrameObj.Delete(frame)\n",
     "\n",
-    "    print(\"All frames deleted successfully\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    print(\"All frames deleted successfully\")\n",
+    "    \n",
     "# Generacion e la geometria de la estructura\n",
     "def create_structural_system(smodel, bay_width=10, story_height=10, num_bays=2, num_stories=2):\n",
     "    # Delete existing frames\n",
@@ -90,38 +91,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. Analisis y solicitud de resultados"
+    "Analisis y solicitud de resultados y Desbloque del modelo para implementar modificaciones"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_analysis_and_get_joint_reactions(smodel):\n",
+    "def run_analysis_and_get_joint_reactions(smodel, base_points):\n",
     "    smodel.Analyze.RunAnalysis()\n",
     "    smodel.Results.Setup.DeselectAllCasesAndCombosForOutput()\n",
     "    smodel.Results.Setup.SetCaseSelectedForOutput(\"Dead\")\n",
     "    smodel.Results.Setup.SetCaseSelectedForOutput(\"Live\")\n",
     "\n",
     "    for each in base_points:\n",
-    "        print(smodel.Results.JointReact(each, 0))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Desbloque del modelo para implementar modificaciones"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        print(smodel.Results.JointReact(each, 0))\n",
+    "\n",
     "def unlocked_model(smodel):\n",
     "    # Unlock the model before running the analysis\n",
     "    smodel.SetModelIsLocked(False)"
@@ -130,7 +117,170 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 1. API-CSI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Unidades Base mks\n",
+    "m = 1\n",
+    "kg = 1\n",
+    "s = 1\n",
+    "\n",
+    "# Otras Unidades\n",
+    "cm = 0.01*m\n",
+    "kgf = 9.80665*kg*m/s**2\n",
+    "tonf = 1000*kgf\n",
+    "\n",
+    "# Constantes Físicas\n",
+    "g = 9.80665*m/s**2\n",
+    "\n",
+    "# configuraciones de unidades\n",
+    "KN_m_C = 6\n",
+    "kgf_m_C = 8\n",
+    "Tonf_m_C = 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connect_software = 2 # 1 para ETABS, 2 para SAP2000\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if connect_software == 1:\n",
+    "    software = \"SAP2000\"\n",
+    "    conn = { 'app_adjunto': \"CSI.SAP2000.API.SapObject\", 'app_helper': 'SAP2000v1.Helper' }\n",
+    "elif (connect_software == 2):\n",
+    "    software = \"ETABS\"\n",
+    "    conn = { 'app_adjunto': \"CSI.ETABS.API.ETABSObject\", 'app_helper': \"ETABSv1.Helper\" }\n",
+    "else: \n",
+    "    print(\"No tenemos soporte aun\")\n",
+    "    sys.exit()\n",
+    "\n",
+    "helper = comtypes.client.CreateObject(conn['app_helper'])\n",
+    "if connect_software == 1: helper = helper.QueryInterface(comtypes.gen.SAP2000v1.cHelper)\n",
+    "if connect_software == 2: helper = helper.QueryInterface(comtypes.gen.ETABSv1.cHelper);\n",
+    "try: Sap2000Object = helper.CreateObjectProgID(conn[\"app_adjunto\"])\n",
+    "except (OSError, comtypes.COMError): print(f\"Cannot start a new instance of the program({software}).\")\n",
+    "\n",
+    "Sap2000Object.ApplicationStart()\n",
+    "\n",
+    "smodel = Sap2000Object.SapModel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Initialize the model\n",
+    "smodel.InitializeNewModel()\n",
+    "\n",
+    "smodel.File.NewBlank()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smodel.SetPresentUnits(KN_m_C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All frames deleted successfully\n",
+      "Structural system created successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create the structural system and apply loads\n",
+    "base_points = create_structural_system(\n",
+    "    smodel, \n",
+    "    bay_width=4, \n",
+    "    story_height=8, \n",
+    "    num_bays=4, \n",
+    "    num_stories=4\n",
+    ")\n",
+    "\n",
+    "smodel.View.RefreshView(\n",
+    "    0, \n",
+    "    False\n",
+    "    );"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the model before analysis\n",
+    "\n",
+    "# Se definen registros de salida\n",
+    "projectPath = r'C:\\\\CSi_API_Example';\n",
+    "if not os.path.exists(projectPath):\n",
+    "    try: os.makedirs(projectPath)\n",
+    "    except OSError: pass\n",
+    "\n",
+    "ModelPath = projectPath + os.sep\n",
+    "# save model | guardar nuestro modelo\n",
+    "if connect_software == 1: ret = smodel.File.Save(ModelPath+'Frame-e2.sdb')\n",
+    "if connect_software == 2: ret = smodel.File.Save(ModelPath+'Frame-e2.edb', True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Resultados"
+   ]
   },
   {
    "cell_type": "code",
@@ -167,50 +317,24 @@
     }
    ],
    "source": [
-    "# Initialize SAP2000\n",
-    "helper = comtypes.client.CreateObject('SAP2000v1.Helper')\n",
-    "helper = helper.QueryInterface(comtypes.gen.SAP2000v1.cHelper)\n",
-    "Sap2000Object = helper.CreateObjectProgID(\"CSI.SAP2000.API.SapObject\")\n",
-    "Sap2000Object.ApplicationStart()\n",
-    "smodel = Sap2000Object.SapModel\n",
-    "\n",
-    "# Initialize the model\n",
-    "smodel.InitializeNewModel()\n",
-    "KN_m_C = 6\n",
-    "smodel.SetPresentUnits(KN_m_C)\n",
-    "smodel.File.NewBlank()\n",
-    "\n",
-    "# Save the model before analysis\n",
-    "# smodel.File.Save(r\"C:\\path\\to\\save\\example.sdb\")\n",
-    "# Se definen registros de salida\n",
-    "projectPath = r'C:\\\\CSi_API_Example';\n",
-    "if not os.path.exists(projectPath):\n",
-    "    try: os.makedirs(projectPath)\n",
-    "    except OSError: pass\n",
-    "ModelPath = projectPath + os.sep + 'Frame-e1.edb'\n",
-    "# save model | guardar nuestro modelo\n",
-    "ret = smodel.File.Save(ModelPath)\n",
-    "\n",
-    "# Create the structural system and apply loads\n",
-    "base_points = create_structural_system(\n",
-    "    smodel, \n",
-    "    bay_width=4, \n",
-    "    story_height=8, \n",
-    "    num_bays=9, \n",
-    "    num_stories=18\n",
-    "    )\n",
-    "\n",
     "# Run the analysis and get joint reactions\n",
-    "run_analysis_and_get_joint_reactions(smodel)\n",
+    "run_analysis_and_get_joint_reactions(smodel, base_points)\n",
     "\n",
     "# Unlock and run the analysis again (if needed)\n",
     "unlocked_model(smodel)\n",
-    "run_analysis_and_get_joint_reactions(smodel)"
+    "run_analysis_and_get_joint_reactions(smodel, base_points)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Cerrar la conneccion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -222,10 +346,8 @@
     }
    ],
    "source": [
-    "if (Sap2000Object.ApplicationExit(False)):\n",
-    "    print(\"SAP2000, No se pudo cerrar\")\n",
-    "else:\n",
-    "    print(\"Se cerro con exito.\")\n",
+    "if (Sap2000Object.ApplicationExit(False)): print(\"SAP2000, No se pudo cerrar\")\n",
+    "else: print(\"Se cerro con exito.\")\n",
     "\n",
     "smodel = None\n",
     "del smodel"
