Correccion de errores en tag de la carga puntual para Truss

--- a/srcPython/mod02CSiAPI_defaultModel_Etabs.ipynb
+++ b/srcPython/mod02CSiAPI_defaultModel_Etabs.ipynb
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
    "metadata": {},
    "source": [
     "- C:\\\\Program Files\\\\Computers and Structures\\\\ETABS 17\\\\CSI API ETABS v1.chm\n",
-    "- "
+    "- ReFrame Software, CSi ETABS & SAP2000 API Tutorial - Part 3: Python API Basics [27 oct 2020], (video): https://youtu.be/VlnJCV_cy8I"
    ]
   }
  ],
