--- a/srcPython/mod05CSiAPI_example4 Frame a-estructurada.ipynb
+++ b/srcPython/mod05CSiAPI_example4 Frame a-estructurada.ipynb
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejemplo-01"
+    "### Ejemplo-01a (2D)"
    ]
   },
   {
@@ -177,7 +177,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejemplo-02"
+    "### Ejemplo-02a (3D)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pag.298 Example 6.2"
    ]
   },
   {
@@ -185,7 +192,76 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# ton_m_C = 12\n",
+    "# SapModel.SetPresentUnits(ton_m_C) # Tonf, m, C|\n",
+    "\n",
+    "# material_concrete = 2 # material_type = 2;\n",
+    "# SapModel.SetMaterial('CONC280', material_concrete)\n",
+    "\n",
+    "# E= 15000*(280**0.5)*10000\n",
+    "# SapModel.SetMaterialProperty('CONC280', \n",
+    "#                              E, \n",
+    "#                              0.2, \n",
+    "#                              9.9e6)\n",
+    "\n",
+    "# H = 3.50\n",
+    "# Lx = 4.50\n",
+    "# Ly = 4.50\n",
+    "# coords = np.array([\n",
+    "#     '1': (0.0, 0.0, 0.0),\n",
+    "#     '2': (Lx, 0.0, 0.0),\n",
+    "#     '3': (Lx, Ly, 0.0),\n",
+    "#     '4': (0.0, Ly, 0.0),\n",
+    "#     '5': (0.0, 0.0, 1.2*H),\n",
+    "#     '6': (Lx, 0.0, 5*H),\n",
+    "#     '7': (Lx, Ly, 1.2*H),\n",
+    "#     '8': (0.0, Ly, 5*H),\n",
+    "# ])\n",
+    "# for label, (x,y,z) in coords.items():\n",
+    "#     SapModel.PointObj.AddCartesian(x, y, z, label)\n",
+    "\n",
+    "# for nodei in ['1','2','3','4']:\n",
+    "#     SapModel.PointObj.SetRestraint(nodei, \n",
+    "#         [True, True, True, \n",
+    "#         True, True, True])  \n",
+    "    \n",
+    "# SapModel.FrameObj.AddByCoord(0,0,0,0,0,H, '', 'COL45x45')\n",
+    "# SapModel.FrameObj.AddByCoord(Lx,0,0,Lx,0,H, '', 'COL45x45')\n",
+    "# SapModel.FrameObj.AddByCoord(Lx,Ly,0,Lx,Ly,H, '', 'COL45x45')\n",
+    "# SapModel.FrameObj.AddByCoord(0,Ly,0,0,Ly,H, '', 'COL45x45')\n",
+    "\n",
+    "# SapModel.FrameObj.AddByCoord(0,0,H, Lx,0,H, '', 'V1', 'VIG30x60')\n",
+    "# SapModel.FrameObj.AddByCoord(Lx,0,H, Lx,Ly,H, '', 'V2', 'VIG30x60')\n",
+    "# SapModel.FrameObj.AddByCoord(Lx,Ly,H, 0,Ly,H, '', 'V3', 'VIG30x60')\n",
+    "# SapModel.FrameObj.AddByCoord(0,Ly,H, 0,0,H, '', 'V4', 'VIG30x60')\n",
+    "\n",
+    "# SapModel.LoadPatterns.Add('DEAD1', 1, True)\n",
+    "# SapModel.LoadPatterns.Add('LIVE1', 3, True)\n",
+    "\n",
+    "# # carga distribuida\n",
+    "# q=1.2 # ton/m\n",
+    "# SapModel.FrameObj.SetLoadDistributed('5', \n",
+    "#                                      'DEAD1', \n",
+    "#                                      1, \n",
+    "#                                      10, \n",
+    "#                                      0, 1, \n",
+    "#                                      q, q, \n",
+    "#                                      'Global')\n",
+    "# SapModel.FrameObj.SetLoadDistributed('5', 'DEAD1', 1, 10, 0, 1, q, q, 'Global')\n",
+    "# SapModel.FrameObj.SetLoadDistributed('6', 'DEAD1', 1, 10, 0, 1, q, q, 'Global')\n",
+    "# SapModel.FrameObj.SetLoadDistributed('7', 'DEAD1', 1, 10, 0, 1, q, q, 'Global')\n",
+    "# SapModel.FrameObj.SetLoadDistributed('8', 'DEAD1', 1, 10, 0, 1, q, q, 'Global')\n",
+    "\n",
+    "# SapModel.PointObj.SetLoadForce('5', 'LIVE1', [2.0, 0.0, 0.0, 0.0, 0.0, 0.0])\n",
+    "# SapModel.PointObj.SetLoadForce('6', 'LIVE1', [2.0, 0.0, 0.0, 0.0, 0.0, 0.0])\n",
+    "\n",
+    "# SapModel.RespCombo.Add('COMBO1', 0)\n",
+    "# SapModel.RespCombo.SetCaseList('COMBO1', 0, 'DEAD1', 1.0)\n",
+    "# SapModel.RespCombo.SetCaseList('COMBO1', 0, 'LIVE1', 1.0)\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
