--- a/srcPython/mod05CSiAPI_example4 Frame b-funcional.ipynb
+++ b/srcPython/mod05CSiAPI_example4 Frame b-funcional.ipynb
@@ -240,7 +240,7 @@
     }
    ],
    "source": [
-    "# Create the structural system and apply loads\n",
+    "# Creacion de materiales y geometria | Create the structural system\n",
     "base_points = create_structural_system(\n",
     "    smodel, \n",
     "    bay_width=4, \n",
@@ -248,6 +248,10 @@
     "    num_bays=4, \n",
     "    num_stories=4\n",
     ")\n",
+    "\n",
+    "# carga en portico | apply loads\n",
+    "\n",
+    "# Condiciones de borde o apoyos | restraints\n",
     "\n",
     "smodel.View.RefreshView(\n",
     "    0, \n",
@@ -334,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +350,7 @@
     }
    ],
    "source": [
-    "if (Sap2000Object.ApplicationExit(False)): print(\"SAP2000, No se pudo cerrar\")\n",
+    "if (smodel.ApplicationExit(False)): print(\"SAP2000, No se pudo cerrar\")\n",
     "else: print(\"Se cerro con exito.\")\n",
     "\n",
     "smodel = None\n",
