Actualizaciones menores en readme y refactorizacion de archivos

--- a/srcPython/mod01CSiAPI funciones.ipynb
+++ b/srcPython/mod01CSiAPI funciones.ipynb
@@ -18,8 +18,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Carga Puntual\n",
-    "\n",
+    "### Carga Puntual"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "`Sintax` para la carga puntual\n",
     "\n",
     "En lenguaje `C#`\n",
@@ -34,7 +39,7 @@
     ")\n",
     "```\n",
     "Su equivalente en `python`\n",
-    "```py\n",
+    "```python\n",
     "SetLoadForce(\n",
     "\tName: str,\n",
     "\tLoadPat: str,\n",
@@ -52,6 +57,7 @@
    "source": [
     "### Carga Distribuida\n",
     "\n",
+    "![](images/SetLoadDistributed.png)\n",
     "\n",
     "`Sintax` para la carga distribuida\n",
     "\n",
@@ -61,7 +67,7 @@
     "\tstring Name,        // Nombre del elemento o idElemento\n",
     "\tstring LoadPat,     // Nombre de patron de la carga o idCargaDistribuida\n",
     "\tint MyType,         // 1: Fuerza por unidad de longitud (F/L), o 2: Momento por unidad de longitud (M/L) \n",
-    "\tint Dir,            // las opciones son de 1 a 11, ... \n",
+    "\tint Dir,            // las opciones son de 1 a 11, ... (Loacl axis: 1=X, 2=Y, 3=Z, ...) \n",
     "\tdouble Dist1,       // punto incial de la carga distribuida\n",
     "\tdouble Dist2,       // punto final de la carga distribuida\n",
     "\tdouble Val1,        // valor de carga en el nodo inicial\n",
@@ -89,6 +95,30 @@
     "\tItemType = eItemType.Objects # eItemType \n",
     ") -> int\n",
     "```\n",
+    "**MyType**: This is an array that includes 1 or 2, indicating the type of distributed load.  \n",
+    "- 1 = Force\n",
+    "- 2 = Moment\n",
+    "**Dir**: This is an array that includes an integer between 1 and 11, indicating the direction of the load.\n",
+    "- 1 = Local 1 axis (only applies when CSys is Local)\n",
+    "- 2 = Local 2 axis (only applies when CSys is Local)\n",
+    "- 3 = Local 3 axis (only applies when CSys is Local)\n",
+    "- 4 = X direction (does not apply when CSys is Local)\n",
+    "- 5 = Y direction (does not apply when CSys is Local)\n",
+    "- 6 = Z direction (does not apply when CSys is Local)\n",
+    "- 7 = Projected X direction (does not apply when CSys is Local)\n",
+    "- 8 = Projected Y direction (does not apply when CSys is Local)\n",
+    "- 9 = Projected Z direction (does not apply when CSys is Local)\n",
+    "- 10 = Gravity direction (only applies when CSys is Global)\n",
+    "- 11 = Projected Gravity direction (only applies when CSys is Global)\n",
+    " \n",
+    "The positive gravity direction (see Dir = 10 and 11) is in the negative Global Z direction.\n",
+    "\n",
+    "ItemType: This is one of the following items in the eItemType enumeration:\n",
+    "\n",
+    "- Object = 0\n",
+    "- Group = 1\n",
+    "- SelectedObjects = 2\n",
+    "<!-- https://youtu.be/q1u8eOynRhE -->\n",
     "\n",
     "Optener puntos o nodos de referncia del elemento o miembro para la asignacion de carga distribuda\n",
     "```py\n",
