--- a/srcPython/mod03CSiAPI_example2 AEL Truss.ipynb
+++ b/srcPython/mod03CSiAPI_example2 AEL Truss.ipynb
@@ -1222,9 +1222,7 @@
    "source": [
     "- [1] Speeding up Composite Differential Evolution for structural optimization using neural networks: https://doi.org/10.1080/24751839.2021.1946740\n",
     "- [2] Performance of Six Metaheuristic Algorithms for Multi-Objective Optimization of Nonlinear Inelastic Steel Trusses: https://www.mdpi.com/2075-5309/13/4/868\n",
-    "- [3] Comparison of Multi-Objective Metaheuristics for Discrete Optimization of Steel Trusses Using Direct Analysis: https://core.ac.uk/reader/640003570\n",
-    "- [4] Structural Tech [4 jun 2025], Análisis Estructural de Armaduras con Python, Opensees y SAP2000 (video) https://youtu.be/nZpuiho-TC4\n",
-    "- [5] Engineer Hunter [6 jul 2021] SAP2000 OAPI (Open Application Programming Interface) using Python (video) https://youtu.be/P6RO-GnQYiM"
+    "- [3] Comparison of Multi-Objective Metaheuristics for Discrete Optimization of Steel Trusses Using Direct Analysis: https://core.ac.uk/reader/640003570"
    ]
   }
  ],
